Fix hamb contrast color

--- a/css/index.css
+++ b/css/index.css
@@ -268,6 +268,18 @@
 
 }
 
+/* Nav-toggler */
+
+body.ametista .navbar-toggler i,
+body.diamante .navbar-toggler i,
+body.esmeralda .navbar-toggler i,
+body.rubelita .navbar-toggler i,
+body.rubi .navbar-toggler i,
+body.safira .navbar-toggler i,
+body.topaz .navbar-toggler i{
+    color: white !important;
+}
+
 
 /* Ametista */
 
@@ -766,7 +778,7 @@ body {
     border-radius: 8px !important;
     padding: 10px 20px !important;
     background: white !important;
-    color: black !important;
+    color: white !important;
     font-weight: bolder !important;
 }
 
